cluster_access_TLSoffloading/5-ingressroutetraefikmetrics.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: tlsoff
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.clemoregan.com`) && (PathPrefix(`/metrics`))
      kind: Rule
      services:
        - name: prometheus@internal
          kind: TraefikService
