cluster_access_TLSoffloading/prometheus.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prom.clemeoregan.com`)
      kind: Rule
      services:
      - kind: Service
        name: prometheus-stack-kube-prom-prometheus
        port: 9090
